# esprima-python

./: .editorconfig  .gitignore  ChangeLog  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  __main__.py  character.py  compat.py  error_handler.py  esprima.py  jsx_nodes.py  jsx_parser.py  nodes.py  objects.py  parser.py  pyproject.toml  scanner.py  setup.cfg  setup.py  syntax.py  tokenizer.py  utils.py
.github/workflows/: python-package.yml
esprima/: __init__.py  __main__.py  character.py  comment_handler.py  esprima.py  jsx_parser.py  messages.py  nodes.py  objects.py  parser.py  scanner.py  syntax.py  tokenizer.py  visitor.py
examples/: visitor.py
test/: __init__.py  __main__.py
test/fixtures/ES6/template-literals/: octal-literal.failure.json
test/fixtures/ES6/yield/: invalid-yield-object-methods.js  invalid-yield-object-methods.tree.json  invalid-yield-object-property-getter.js  invalid-yield-object-property-getter.tree.json  invalid-yield-object-property-setter.js  invalid-yield-object-property-setter.tree.json
test/fixtures/ESnext/: classProperties.js  classProperties.tree.json
test/fixtures/esprima-python/: recursion.js
test/fixtures/expression/binary/: multiline_string_literal.js
test/fixtures/expression/primary/literal/regular-expression/: migrated_0005.tree.json  u-flag-valid-range.tree.json
