[build-system]
requires = ["setuptools>=44", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "esprima"
authors = [{name = "German M. Bravo (Kronuz)", email = "german.mb@gmail.com"}]
license = {text = "BSD-2-Clause"}
description = "ECMAScript parsing infrastructure for multipurpose analysis in Python"
readme = "README.rst"
keywords = [
    "esprima",
    "ecmascript",
    "javascript",
    "parser",
    "ast",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
]
urls = {Homepage = "https://github.com/Kronuz/esprima-python"}
dynamic = ["version"]

[project.scripts]
esprima = "esprima.__main__:main"

[tool.setuptools]
packages = ["esprima"]
license-files = ["LICENSE.BSD"]
include-package-data = false

[tool.setuptools_scm]
