[metadata]
name = esprima
version = 4.0.1
author = German M. Bravo (Kronuz)
author_email = german.mb@gmail.com
license = BSD License
description = ECMAScript parsing infrastructure for multipurpose analysis in Python
keywords =
    esprima
    ecmascript
    javascript
    parser
    ast
url = https://github.com/Kronuz/esprima-python
long_description = file: setup.cfg.1
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: General
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages = esprima

[options.entry_points]
console_scripts = esprima = esprima.__main__:main
